#17 - Code formating